--- a/T1566.html
+++ b/T1566.html
@@ -233,7 +233,8 @@ img :not(emoji){
 <header>MITRE ATT&amp;CK 101 /  T1566 Phishing</header>
 
 <h3>フィッシングの語源</h3>
-<p><img src="./img/Phishing.png" alt="" /><code>fishing</code>（釣り）のハッカー的なスラング（Leet的言い換えと呼ばれる意図的な同音別表記）であるが、fがphに変化しているのは<code>Phreaking</code>（フリーキング、音声によって電話網を意図的に誤作動させる不正行為）からの類推であると欧米では考えられている。しかし、日本国内のメディアでは<code>sophisticated</code>（洗練された）との合成語であるとする見解が主流である。このほか、<code>password harvesting fishing</code> の略とする説もある。</p>
+<p><img src="./img/Phishing.png" alt="" /><br />
+<code>fishing</code>（釣り）のハッカー的なスラング（Leet的言い換えと呼ばれる意図的な同音別表記）であるが、fがphに変化しているのは<code>Phreaking</code>（フリーキング、音声によって電話網を意図的に誤作動させる不正行為）からの類推であると欧米では考えられている。しかし、日本国内のメディアでは<code>sophisticated</code>（洗練された）との合成語であるとする見解が主流である。このほか、<code>password harvesting fishing</code> の略とする説もある。</p>
 <footer><a href="https://ja.wikipedia.org/wiki/%E3%83%95%E3%82%A3%E3%83%83%E3%82%B7%E3%83%B3%E3%82%B0_(%E8%A9%90%E6%AC%BA)">https://ja.wikipedia.org/wiki/フィッシング_(詐欺)</a></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 960 720"><foreignObject width="960" height="720"><section id="5" data-class="default" data-header="MITRE ATT&amp;CK 101 /  T1566 Phishing" data-paginate="true" data-footer="https://www.intellilink.co.jp/column/security/2020/061700.aspx" data-theme="gaia" data-style="section {
