--- a/T1571.html
+++ b/T1571.html
@@ -322,7 +322,7 @@ img :not(emoji){
 <h4>M1031 Network Intrusion Prevention</h4>
 <p>シグネチャを使用し、特定の攻撃者・マルウェアのトラフィックを識別し、侵入検知/防止する。</p>
 <h4>M1030 Network Segmentation</h4>
-<p>ファイアウォールとプロキシを適切に耕世しい、そのセグメントに必要なポートのみにトラフィックを制限する。</p>
+<p>ファイアウォールとプロキシを適切に構成し、そのセグメントに必要なポートのみにトラフィックを制限する。</p>
 <footer><a href="https://attack.mitre.org/techniques/T1571/">https://attack.mitre.org/techniques/T1571/</a></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 960 720"><foreignObject width="960" height="720"><section id="7" data-class="default" data-footer="https://attack.mitre.org/techniques/T1571/" data-theme="gaia" data-style="section {
@@ -638,7 +638,7 @@ img :not(emoji){
 ;" data-size="4:3">
 <h3>Service Name and Transport Protocol Port Number Registry</h3>
 <p>サービス名とポート番号の対応を、IANAが「Service Name and Transport Protocol Port Number Registry」で公開している。</p>
-<footer>Service Name and Transport Protocol Port Number Registry</footer>
+<footer><a href="https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml">https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml</a></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 960 720"><foreignObject width="960" height="720"><section id="13" data-class="invert" data-theme="gaia" data-style="section {
     font-family: &quot;Hiragino Kaku Gothic Pro&quot;, &quot;ヒラギノ角ゴ Pro&quot;, &quot;Segoe UI&quot;, &quot;Yu Gothic Medium&quot;, &quot;游ゴシック Medium&quot;, YuGothic, &quot;游ゴシック体&quot;, &quot;Meiryo UI&quot;, sans-serif;
